--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
     // Prevent keyboard shortcuts
     document.addEventListener('keydown', function(e) {
-      // Prevent Ctrl+S, Ctrl+U, Ctrl+P, Ctrl+Shift+I
       if (
         (e.ctrlKey && (e.key === 's' || e.key === 'u' || e.key === 'p')) ||
         (e.ctrlKey && e.shiftKey && e.key === 'i')
@@ -29,11 +28,10 @@
   </script>
 </head>
 <body>
-
   <!-- Particle container -->
   <div class="particles" id="particles"></div>
 
-  <!-- Hidden elements for desktop -->
+  <!-- Page navigation -->
   <div class="page-indicators"></div>
   <div class="page-counter">
     <span id="currentPage">1</span>/<span id="totalPages">7</span>
@@ -61,56 +59,49 @@
   <!-- Timestamp -->
   <div class="timestamp" id="timestamp"></div>
 
-  <!-- Papers Container -->
-  <div class="papers-container">
-    <!-- Papers -->
-    <div class="paper video-layer">
-      <video id="paperVideo" width="300" height="200" controls>
-          <source src="images/video.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-      </video>
-    </div>
-    <div class="paper video-layer">
-      <img src="images/main/7.png" />
-    </div>
-    <div class="paper video-layer">
-      <img src="images/4.png" />
-    </div>
+  <!-- Papers -->
+  <div class="paper video-layer">
+    <video id="paperVideo" width="300" height="200" controls>
+        <source src="images/video.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+  </div>
+  <div class="paper video-layer">
+    <img src="images/main/7.png" />
+  </div>
+  <div class="paper video-layer">
+    <img src="images/4.png" />
+  </div>
 
-    <div class="paper heart">
-      <img src="images/heart.webp" alt="Heart" />
-    </div>
-    <div class="paper image">
-      <p><img src="images/main/6.png" /></p>
-      
-      <img src="images/photo/3.PNG" />
-    </div>
-    <div class="paper image">
-      <p><img src="images/main/5.png" /></p>
-      <img src="images/photo/2.PNG" />
-    </div>
-    <div class="paper image">
-      <p><img src="images/main/4.png" /></p>
-      <img src="images/photo/1.PNG" />
-    </div>
-    <div class="paper red">
-      <p class="p1"><img src="images/main/3.png" /></p>
-    </div>
-    <div class="paper">
-      <p class="p1"><img src="images/main/2.png" /></p>
-     
-    </div>
-    <div class="paper">
-      <p class="p1"><img src="images/main/1.png" /></p>
-    </div>
+  <div class="paper heart">
+    <img src="images/heart.webp" alt="Heart" />
+  </div>
+  <div class="paper image">
+    <p><img src="images/main/6.png" /></p>
+    <img src="images/photo/3.PNG" />
+  </div>
+  <div class="paper image">
+    <p><img src="images/main/5.png" /></p>
+    <img src="images/photo/2.PNG" />
+  </div>
+  <div class="paper image">
+    <p><img src="images/main/4.png" /></p>
+    <img src="images/photo/1.PNG" />
+  </div>
+  <div class="paper red">
+    <p class="p1"><img src="images/main/3.png" /></p>
+  </div>
+  <div class="paper">
+    <p class="p1"><img src="images/main/2.png" /></p>
+  </div>
+  <div class="paper">
+    <p class="p1"><img src="images/main/1.png" /></p>
   </div>
 
   <!-- Hidden Video -->
   <div id="videoContainer" style="display: none;">
     <video id="backgroundVideo" src="images/video.mp4"></video>
   </div>
-
-  <!-- Buttons -->
   <button id="playVideoBtn">Play Video</button>
   <button id="openBookBtn">
     <span>Open Book</span>
