--- a/book/index.html
+++ b/book/index.html
@@ -3,23 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Kirthiii</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<!-- Scattered text container -->
-<div class="scattered-text"></div>
-
-<!-- Loading overlay -->
-<div class="loading-overlay">
-  <div class="loading-spinner"></div>
-  <p>Loading your memories...</p>
-</div>
-
-<!-- Page counter -->
-<div class="page-counter">Page 1 of 1</div>
-
+<!-- partial:index.partial.html -->
+<div class="instruction">Flip the page</div>
 <div class="book">
   <div class="page cover-front" onclick="movePage(this, 1)">
     <img src="book/cover.PNG" alt="cover">
